# docker-proxy

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  desc.txt  go.mod  go.sum  main.go
ebpf/: kprobe__sys_connect.bpf.c  sk-lookup.bpf.c  speed-transfer.bpf.c  tc-dns-parse.bpf.c  tc-dns-replace.bpf.c  tc-proxy.bpf.c  xdp-dns-parse.bpf.c  xdp-proxy.bpf.c  xdp_csum.h
ebpf/headers/: bpf_all.h  dns_helper.h  slb.h  tcp_helper.h  vmlinux.h
ebpf/headers/amd64/: vmlinux.h
ebpf/headers/bpf/: bpf_cleanup.h  bpf_common.h  bpf_csum.h  bpf_helper_defs.h  bpf_helpers.h  bpf_insn.h  bpf_kprobe_args.h  bpf_tracing.h  bpf_tracing_net.h  map_helpers.h
pkg/: tools.go
pkg/cert/: cert.go
pkg/cfg/: cfg.go
pkg/ebpf/krpobe__sys_connect/: sys_connect.go  sys_connect_bpfeb.go  sys_connect_bpfel.go
pkg/ebpf/sk-lookup/: sk-lookup.go  sk_lookup_bpfeb.go  sk_lookup_bpfel.go
pkg/ebpf/tc-dns-parse/: tc-dns-parse.go  tc_dns_parse_bpfeb.go  tc_dns_parse_bpfel.go
pkg/ebpf/tc-dns-replace/: tc_dns_replace.go  tc_dns_replace_bpfeb.go  tc_dns_replace_bpfel.go
pkg/ebpf/tc-proxy/: tc-proxy.go  tc_proxy_bpfeb.go  tc_proxy_bpfel.go
pkg/ebpf/xdp-dns-parse/: xdp-dns-parse.go  xdp_dns_parse_bpfeb.go  xdp_dns_parse_bpfel.go
pkg/ebpf/xdp-proxy/: xdp-proxy.go  xdp_proxy_bpfeb.go  xdp_proxy_bpfel.go
pkg/eth/: dummy.go  veth.go
pkg/forward/: iptables.go
pkg/http/: serve.go  serve_test.go
pkg/log/: ctx.go
pkg/proxy/: server.go
pkg/systemd/: restart.go
pkg/utils/: dns.go  dns_test.go  eth.go
test/case1/: main.go
tproxy/: Cargo.toml  INTERACTIVE_README.md  build.rs  test_client.py
tproxy/src/: main.rs
tproxy/src/bpf/: tproxy.bpf.c  tproxy.skel.rs
